2007-01-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ae-quit-application): New function.
	(mac-apple-event-map): Bind "quit application" Apple event to it.

2007-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-svn.el (vc-svn-parse-status): Trust the filename argument more
	than the program's output.

2007-01-14  Juanma Barranquero  <lekktu@gmail.com>

	* kmacro.el (kmacro-insert-counter, kmacro-set-counter)
	(kmacro-start-macro-or-insert-counter)
	(kmacro-step-edit-prefix-commands): Fix typos in docstrings.
	(kmacro-call-ring-2nd, kmacro-call-ring-2nd-repeat): Doc fixes.

	* longlines.el (longlines-show-hard-newlines):
	* ruler-mode.el (ruler-mode-ruler):
	* emulation/keypad.el (keypad-setup):
	* progmodes/antlr-mode.el (antlr-indent-at-bol-alist):
	Fix typo in docstring.

2007-01-13  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el (tumme-cmd-rotate-original-options): Add -outfile
	option.  Remove redirect character ">".

2007-01-13  Juanma Barranquero  <lekktu@gmail.com>

	* replace.el (perform-replace): Remove leftover code.

2007-01-12  Richard Stallman  <rms@gnu.org>

	* replace.el (perform-replace): Don't clear NODENT when computing
	the replacement string.

2007-01-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-local-copy):
	Set `enable-multibyte-characters' to nil.  Reported by Chris Moore
	<christopher.ian.moore@gmail.com>.

2007-01-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-sanity-check-context-hunk-half)
	(diff-sanity-check-hunk): New functions.
	(diff-find-source-location): Use'em to check the hunks are well-formed.

	* hexl.el (hexlify-buffer, dehexlify-buffer): Don't complain and don't
	activate undo when undo is not active.
	Reported by Chris Moore <christopher.ian.moore@gmail.com>.

2007-01-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-next-regexp, ffap-machine-p, ffap-newsgroup-regexp)