@@ -1,3 +1,11 @@
+2007-01-15  Karl Fogel  <kfogel@red-bean.com>
+
+	* bookmark.el (bookmark-buffer-file-name): Abbreviate the bookmark
+	path.  Rewrite function in `cond' style for readability.
+
+	Suggested by: Stephen Eglen <S.J.Eglen{_AT_}damtp.cam.ac.uk>
+	(The path shortening, that is, not the rearrarangement.)
+
 2007-01-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
 
 	* term/mac-win.el (mac-ae-quit-application): New function.
